# scoreforge-turbo

./: .gitignore  AGENTS.md  CLAUDE.md  CONVEX_COSTS.md  DEPLOYMENT.md  README.md  package.json
.github/workflows/: ci.yml  deploy.yml
.recovery-backup-2026-02-07T21-21-40-204Z/apps/mobile/: package.json  tailwind.config.js
apps/desktop/: index.html  package.json  tailwind.config.js
apps/desktop/public/: scoreboard.html
apps/desktop/src/: App.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/display/: Cargo.toml  package.json
apps/display/assets/: AppIcon.icns
apps/display/src/: app.rs  flags.rs  main.rs  state.rs
apps/display/src/components/: background.rs  image.rs  mod.rs  tennis_name.rs  tennis_score.rs  tennis_serving.rs  tennis_time.rs  text.rs
apps/display/src/data/: convex.rs  live_data.rs  mod.rs
apps/display/src/designer/: canvas.rs  component_library.rs  display_panel.rs  mod.rs  property_panel.rs  toolbar.rs
apps/display/src/display/: renderer.rs
apps/display/src/storage/: assets.rs  mod.rs  scoreboard.rs
apps/mobile/: .env.example  .gitignore  App.tsx  README.md  app.json  eas.json  metro.config.js  package.json  tailwind.config.js
apps/mobile/app/: _layout.tsx  index.tsx  modal.tsx
apps/mobile/components/: ErrorBoundary.tsx  OfflineBanner.tsx  QRScannerModal.tsx  ScreenContent.tsx  themed-text.tsx  themed-view.tsx
apps/web/: next.config.js  package.json  tsconfig.json  vercel.json  vitest.config.ts
docs/: plan.md
docs/plans/: 2026-02-05-scoreforge-display-design.md  2026-02-18-court-based-temp-scorers-plan.md
(+256 files in other folders)
