[package]
name = "scoreforge-display"
version = "0.1.0"
edition = "2024"
description = "Pure Rust scoreboard designer and display application"

[dependencies]
eframe = "0.33"
egui = "0.33"
convex = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
uuid = { version = "1", features = ["v4", "serde"] }
directories = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
rfd = "0.17"
maplit = "1"
futures = "0.3"
