[package]
name = "scoreforge-display"
version = "0.1.0"
edition = "2024"
description = "Pure Rust scoreboard designer and display application"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui = "0.33.3"
convex = "0.10.2"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
directories = "6.0.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
rfd = "0.17.2"
maplit = "1.0.2"
futures = "0.3.31"
display-info = "0.5.7"
zip = "7.4.0"
wgpu = { version = "27.0.1", default-features = false, features = ["metal", "dx12"] }

[dev-dependencies]
tempfile = "3"
